--- a/supago/requirements.txt
+++ b/supago/requirements.txt
@@ -1,6 +1,17 @@
 asgiref==3.3.1
+boto3==1.16.63
+botocore==1.19.63
 Django==3.1.5
+django-storages==1.11.1
 djangorestframework==3.12.2
+jmespath==0.10.0
+mysqlclient==2.0.3
+Pillow==8.1.0
+pkg-resources==0.0.0
+python-dateutil==2.8.1
 python-dotenv==0.15.0
 pytz==2020.5
+s3transfer==0.3.4
+six==1.15.0
 sqlparse==0.4.1
+urllib3==1.26.3
