--- a/front/package.json
+++ b/front/package.json
@@ -8,6 +8,9 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "0.1.10",
+    "@react-navigation/bottom-tabs": "^5.11.8",
+    "@react-navigation/native": "^5.9.3",
     "expo": "^40.0.1",
     "expo-status-bar": "~1.0.3",
     "native-base": "^2.15.2",
@@ -17,6 +20,7 @@
     "react-native-gesture-handler": "~1.8.0",
     "react-native-hr": "^1.1.4",
     "react-native-reanimated": "~1.13.0",
+    "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.2",
     "react-native-web": "~0.13.12",
     "react-navigation": "^4.4.4",
