--- a/front/package.json
+++ b/front/package.json
@@ -8,9 +8,10 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.11.8",
-    "@react-navigation/native": "^5.9.3",
+    "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.4",
     "axios": "^0.21.1",
     "expo": "^40.0.1",
@@ -19,12 +20,14 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
+    "react-native-daum-postcode": "^1.0.9",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-hr": "^1.1.4",
     "react-native-reanimated": "~2.1.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
     "react-native-web": "~0.13.12",
+    "react-native-webview": "^11.4.3",
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4"
   },
