--- a/front/package.json
+++ b/front/package.json
@@ -15,16 +15,17 @@
     "axios": "^0.21.1",
     "expo": "^40.0.1",
     "expo-status-bar": "~1.0.4",
+    "hoist-non-react-statics": "^3.3.2",
     "native-base": "^2.15.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
-    "react-native-gesture-handler": "~1.10.2",
+    "react-native-gesture-handler": "~1.8.0",
     "react-native-hr": "^1.1.4",
-    "react-native-reanimated": "~2.1.0",
-    "react-native-safe-area-context": "3.2.0",
-    "react-native-screens": "~3.0.0",
-    "react-native-web": "~0.13.12",
+    "react-native-reanimated": "~1.13.0",
+    "react-native-safe-area-context": "3.1.9",
+    "react-native-screens": "~2.15.2",
+    "react-native-web": "^0.16.1",
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4"
   },
