--- a/front/package.json
+++ b/front/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.12.1",
-    "@react-native-community/masked-view": "0.1.10",
+    "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/bottom-tabs": "^5.11.8",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.4",
@@ -28,10 +28,10 @@
     "react-native-gesture-handler": "~1.8.0",
     "react-native-hr": "^1.1.4",
     "react-native-reanimated": "~1.13.0",
-    "react-native-safe-area-context": "3.1.9",
+    "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "~2.15.2",
     "react-native-web": "~0.13.12",
-    "react-native-webview": "^11.4.3",
+    "react-native-webview": "^11.4.4",
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4"
   },
