--- a/front/package.json
+++ b/front/package.json
@@ -30,7 +30,7 @@
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "~2.15.2",
-    "react-native-web": "~0.13.12",
+    "react-native-web": "^0.13.18",
     "react-native-webview": "^11.4.4",
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4"
