--- a/front/package.json
+++ b/front/package.json
@@ -8,13 +8,13 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-community/async-storage": "^1.12.1",
+    "@react-native-async-storage/async-storage": "^1.13.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.11.8",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.4",
     "axios": "^0.21.1",
-    "expo": "^40.0.1",
+    "expo": "^41.0.0",
     "expo-status-bar": "~1.0.4",
     "native-base": "^2.15.2",
     "react": "16.13.1",
@@ -27,7 +27,7 @@
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
     "react-native-web": "~0.13.12",
-    "react-native-webview": "^11.4.3",
+    "react-native-webview": "11.2.3",
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4"
   },
